# tf2_ulmfit_multifit

./: .gitignore  README.md  convert_fastai2keras.py  fastai_lm_utils.py  fastai_ulmfit_train.py  lm_tokenizers.py  requirements.txt  setup.cfg  ulmfit_commons.py  ulmfit_tf2.py  ulmfit_tf2_heads.py
evaluation_scripts/: calculate_ppl_fastai.py  corpus_feeder.py  klej_benchmark_utils.py
examples/: fastai_train_text_classifier.py  ulmfit_tf_lasthidden_classifier.py  ulmfit_tf_regressor.py  ulmfit_tf_seqtagger.py
examples_data/: conll1000.jsonl  document_classification_labels.txt  hotels200.tsv  sent200.tsv  tagger_ddpl_iob_example.jsonl  tagger_ddpl_multilabel_example.jsonl  tagger_labels.json  tagger_multilabels.json
pretraining_utils/: 01_cleanup.py  02_build_spm.py  03_encode_spm.py  polish_sentence_nltk_tokenizer.py  sequence_utils.py
qrnn/: README.md  qrnn_tf2.py
src/tf2qrnn/: __init__.py  commons.py  convert_fastai2keras.py  encoders.py  fastai_lm_utils.py  fastai_ulmfit_train.py  heads.py  lm_tokenizers.py  reqs.txt  ulmfit_commons.py  ulmfit_tf2.py
src/tf2qrnn/evaluation_scripts/: calculate_ppl_fastai.py  calculate_ppl_tf.py
src/tf2qrnn/examples/: classifier.py  regressor.py  sequence_tagger.py  ulmfit_tf_lasthidden_classifier.py  ulmfit_tf_regressor.py  ulmfit_tf_seqtagger.py  ulmfit_tf_text_classifier.py
src/tf2qrnn/pretraining_utils/: 04_demo.py  cleanup_script.py  next_token_prediction_demo.py  sequence_utils.py
src/tf2qrnn/pretraining_utils/legacy_unused/: 03_train.py  lm_keras_generators.py  train_script.py  (+1 more)
src/tf2qrnn/qrnn/: qrnn_tf2.py
