[metadata]
name = tf2qrnn
version = 0.2.0
author = Hubert Karbowy
author_email = hk@hubertkarbowy.pl
description = QRNN and ULMFiT architectures for Tensorflow 2.x
long_description = file: README.md
long_description_type = text/markdown
url = https://github.com/hubertkarbowy/tf2qrnn
license = Apache Software License

[options]
package_dir =
    = src
packages = find:
install_requires =
    nltk>=3.6.2
    numpy>=1.19.5
    pandas>=1.2.4
    sentencepiece>=0.1.95
    scikit-learn
    tensorflow>=2.4.3
    tensorflow_hub>=0.12.0
    tensorflow_text>=2.4.3
    tqdm>=4.61.1
    matplotlib>=3.4.2
    attr>=0.3.1
python_requires = >=3.6

[options.packages.find]
where = src
